--- a/site/style/demo.scss
+++ b/site/style/demo.scss
@@ -44,11 +44,10 @@ $danger_dark: #bd1120;
 }
 
 .animista {
-  width: 400px;
-  height: 400px;
+  width: 100%;
+  height: 100%;
   display: block;
-  margin: auto;
-  padding-top: 200px;
+  padding: 10px;
 }
 
 .route-transition-demo {
