--- a/site/style/demo.scss
+++ b/site/style/demo.scss
@@ -310,3 +310,21 @@ $danger_dark: #bd1120;
 .gradiant10 {
   background-image: linear-gradient(to bottom, #0c2fd4, #0045d8, #0056d9, #0065d8, #1b73d5);
 }
+
+.bouncing-balls {
+  width: 100%;
+  height: 100%;
+  background: hsl(40, 50%, 95%);
+  display: flex; 
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  
+  svg {
+    width: 100vw;
+    height: 80vh;
+  }
+  circle {
+    transform-origin: 50% 50%;
+  }
+}
