--- a/site/style/demo.scss
+++ b/site/style/demo.scss
@@ -29,18 +29,18 @@ $danger_dark: #bd1120;
 }
 
 .observer-demo {
-  padding: 15px;
-}
+  padding: 20px 30px;
 
-.box-demo {
-  top: 0;
-  left: 0;
-  width: 125px;
-  height: 125px;
-  border-radius: 0%;
-  background-color: #a56609;
-  position: relative;
-  opacity: 1;
+  .box-demo {
+    top: 0;
+    left: 0;
+    width: 100px;
+    height: 100px;
+    border-radius: 0%;
+    background-color: #167fe0;
+    position: relative;
+    opacity: 1;
+  }
 }
 
 .animista {
@@ -315,11 +315,11 @@ $danger_dark: #bd1120;
   width: 100%;
   height: 100%;
   background: hsl(40, 50%, 95%);
-  display: flex; 
+  display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  
+
   svg {
     width: 100vw;
     height: 80vh;
