--- a/site/style/global.scss
+++ b/site/style/global.scss
@@ -43,6 +43,29 @@ div.app {
   }
 }
 
+.links {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  .links-list {
+    list-style: disc;
+  }
+  .links-heading {
+    margin-bottom: 15px;
+  }
+
+  a {
+    font-size: 18px;
+    margin-top: 6px;
+    margin-bottom: 6px;
+    display: block;
+  }
+}
+
 section.container {
   display: flex;
   max-width: 960px;
